@@ -36,8 +36,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
 
 - RegistryLoader virtualhost support [John Hughes <john@Calva.COM>]
 
-- $NameWithVirtualHost problems [John Hughes <john@Calva.COM>]
-
 - PerlRun::flush_namespace needs to check if_owner for all types, not
 just cvs [John M Vinopal <jvinopal@abattoir.com>]
 
